--- a/index.html
+++ b/index.html
@@ -1,68 +1,9 @@
-<h1 align="center">Hi 👋, I'm Joy</h1>
-<h3 align="center">AI & Machine Learning Enthusiast | Web Developer | ECE Student | Podcaster</h3>
-
----
-
-## 🚀 About Me
-- 🎙️ **Podcaster at the IMPACT Club, Chennai Institute of Technology** – I talk tech, stories, ideas, and sometimes things that only make sense after 2 minutes 😄  
-- 🔭 Currently building **TraffiSight – A Smart Vision-Based Traffic Monitoring System**  
-- 🧠 Upcoming: **Tox – Real-Time Intelligent Assistance System**  
-- 🤖 Previous concept: **RoboAdapt – AI Waste Segregation Idea**  
-- 📚 Startup vision: **Novaris – Smart Academic Workflow Platform**  
-- 🌱 Learning **Python, Machine Learning, JavaScript, React, and IoT**  
-- 🎯 Goal: Build useful AI projects and maybe get Google to notice me (or at least slide into my DMs 😎)  
-
----
-
-## 🧠 Skills I’m Building
-<p>
-  <img src="https://skillicons.dev/icons?i=python,js,java,c,cpp,html,css,tailwind,react,nodejs,mysql,git,github,linux" height="45"/>
-</p>
-
----
-
-## 🔥 My Projects
-
-### 🚦 **TraffiSight (In Progress)**
-Smart traffic monitoring using AI-based object detection.  
-**Tech:** Python, OpenCV, YOLO, IoT
-
-### 🧠 **Tox (Upcoming)**
-AI-driven real-time assistant for safety, monitoring, and automation.  
-**Tech:** Python, Sensors, ML, Edge IoT
-
-### ♻️ **RoboAdapt (Concept)**
-AI-powered waste segregation system designed around ESP32-CAM & ML models.
-
-### 📘 **Novaris (Startup Idea)**
-A platform to streamline student–college workflow, academic data, and insights.
-
----
-
-## 🎙️ My Podcast — *Joy Talks*
-I speak about tech, life, ideas, and creativity.  
-✨ Improving communication skills  
-✨ Helping others feel motivated  
-✨ A personal space where I grow and share  
-
-🎧 **Listen here:**  
-👉 *Add your podcast link here*
-
----
-
-## 📊 GitHub Stats
-<p align="center">
-  <img src="https://github-readme-stats.vercel.app/api?username=YOUR_USERNAME&show_icons=true&theme=tokyonight" height="170"/>
-</p>
-
----
-
-## 🌍 Connect With Me
-<p>
-<a href="https://linkedin.com/in/YOUR_LINKEDIN"><img src="https://skillicons.dev/icons?i=linkedin" height="40"/></a>
-<a href="mailto:YOUR_EMAIL@gmail.com"><img src="https://skillicons.dev/icons?i=gmail" height="40"/></a>
-</p>
-
----
-
-⭐ **Thanks for visiting my profile! More projects coming soon...**
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Website</title>
+  </head>
+  <body>
+    <h1>Hello, my GitHub Pages website works!</h1>
+  </body>
+</html>
